--- a/docs/250927.md
+++ b/docs/250927.md
@@ -1,5 +1,5 @@
 ###250923 张艺豪
 1.streampark安装成功并且修改配置
-![img.png](img11.png)
+![img.png](img/img11.png)
 2.项目两个额外指标
-![img.png](img12.png)
+![img.png](img/img12.png)
